Created Azure Function api

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -56,7 +56,7 @@
          <div class="banner-text">
             <h1 class="responsive-headline">Hi, I'm Juan</h1>
             
-            <p>and this page has been viewed <a id="counter"></a> times :) </p> 
+            <p>and this page has been viewed <a id="counter">Loading...</a> times :)</p> 
             <ul class="social">
                <li><a href="www.linkedin.com/in/juan-duran-3b4810178"><i class="fa fa-linkedin"></i></a></li>
                <li><a href="https://github.com/Sonicjobs/azure-resume"><i class="fa fa-github"></i></a></li>
