--- a/frontend/index.html
+++ b/frontend/index.html
@@ -58,7 +58,7 @@
             
             <p>and this page has been viewed <a id="counter">Loading...</a> times :)</p> 
             <ul class="social">
-               <li><a href="www.linkedin.com/in/juan-duran-3b4810178"><i class="fa fa-linkedin"></i></a></li>
+               <li><a href="https://www.linkedin.com/in/jduran-it"><i class="fa fa-linkedin"></i></a></li>
                <li><a href="https://github.com/Sonicjobs/azure-resume"><i class="fa fa-github"></i></a></li>
             </ul>
          </div>
