Fixed and edit HTML Code

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -131,7 +131,7 @@
                <div class="twelve columns">
 
                   <h3>CompTIA Security +</h3>
-                  <p class="info"><em class="date">September 2027</em></p>
+                  <p class="info"><em class="date">September 2024</em></p>
 
                </div>
 
@@ -213,7 +213,7 @@
          <div class="twelve columns">
 
             <ul class="social-links">
-               <li><a href="www.linkedin.com/in/juan-duran-3b4810178"><i class="fa fa-linkedin"></i></a></li>
+               <li><a href="https://www.linkedin.com/in/jduran-it"><i class="fa fa-linkedin"></i></a></li>
                <li><a href="https://github.com/Sonicjobs/azure-resume"><i class="fa fa-github"></i></a></li>
             </ul>
 
