--- a/frontend/index.html
+++ b/frontend/index.html
@@ -8,7 +8,7 @@
    ================================================== -->
    <meta charset="utf-8">
 	<title>Juan's Resume</title>
-	<meta name="description" content="">
+	<meta name="description" content="Juan Duran's Resume: Aspiring IT Specialist and Cloud Security Engineer, focused on cloud projects and cybersecurity.">
 	<meta name="author" content="">
 
    <!-- Mobile Specific Metas
@@ -59,7 +59,7 @@
             <p>and this page has been viewed <a id="counter">Loading...</a> times :)</p> 
             <ul class="social">
                <li><a href="https://www.linkedin.com/in/jduran-it"><i class="fa fa-linkedin"></i></a></li>
-               <li><a href="https://github.com/Sonicjobs/azure-resume"><i class="fa fa-github"></i></a></li>
+               <li><a href="https://github.com/Sonicjobs"><i class="fa fa-github"></i></a></li>
             </ul>
          </div>
       </div>
@@ -79,7 +79,7 @@
 
          <div class="three columns">
 
-            <img class="profile-pic"  src="images/me.png" alt="" />
+            <img class="profile-pic"  src="images/me.webp" alt="" />
 
          </div>
 
@@ -87,8 +87,7 @@
 
             <h2>ABOUT ME</h2>
 
-            <p> Hi, I'm Juan Duran, <span>Aspiring IT Specialists and Cloud Security Engineer</a></span>, <span> <a href="https://mvp.microsoft.com/en-us/PublicProfile/5003866">
-            </a></span> focused on making cloud projects and learning other cool IT stuff.               
+            <p> Hi, I'm Juan Duran, <span>Aspiring IT Specialist and Cloud Security Engineer</span>, focused on making cloud projects and learning other cool IT stuff.</p>               
          </br>
       </br>
        I built this page as part of the <span><a href="https://github.com/madebygps/cgc-azure-resume">Cloud Guru Azure Resume Challenge.</a></span>
@@ -214,7 +213,7 @@
 
             <ul class="social-links">
                <li><a href="https://www.linkedin.com/in/jduran-it"><i class="fa fa-linkedin"></i></a></li>
-               <li><a href="https://github.com/Sonicjobs/azure-resume"><i class="fa fa-github"></i></a></li>
+               <li><a href="https://github.com/Sonicjobs"><i class="fa fa-github"></i></a></li>
             </ul>
 
             <ul class="copyright">
