Updated to make it look a bit cleaner and added images

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -79,7 +79,8 @@
 
          <div class="three columns">
 
-            <img class="profile-pic"  src="images/me.webp" alt="" />
+            <img class="profile-pic" src="images/me.webp" alt="Juan Duran Profile Picture" loading="lazy" />
+
 
          </div>
 
@@ -118,7 +119,12 @@
 
                <div class="twelve columns">
 
-                  <h3>CompTIA Network + </h3>
+                  <h3>
+                     <img src ="images/network+.png" alt="CompTIA Network+ icon" class="cert-icon">
+                  </h3>
+                  <h2>
+                     CompTIA Network +
+                  </h2>
                   <p class="info"><em class="date">May 2024</em></p>
 
                </div>
@@ -128,22 +134,28 @@
             <div class="row item">
 
                <div class="twelve columns">
-
-                  <h3>CompTIA Security +</h3>
+                  <h3>
+                     <img src ="images/security+.png" alt="CompTIA Security+ icon" class="cert-icon">
+                  </h3>
+                  <h2>
+                     CompTIA Security+
+                  </h2>
                   <p class="info"><em class="date">September 2024</em></p>
 
                </div>
 
             </div> <!-- item end -->
 
-            <div class="row item">
-
-               <div class="twelve columns">
-
-                  <h3>Fullerton College Associate Degree</h3>
-                  <p class="info"><em class="date">May 2022</em></p>
-
-               </div>
+        <!-- Education Section -->
+        <div class="row item">
+         <div class="twelve columns">
+            <h3>
+               <img src="images/fullcoll.png" alt="Fullerton College icon" class="cert-icon"> 
+               Fullerton College Associate Degree
+            </h3>
+            <p class="info"><em class="date">May 2022</em></p>
+         </div>
+      </div>
 
             </div> <!-- item end -->
 
@@ -164,6 +176,7 @@
             <div class="row item">
 
                <div class="twelve columns">
+                  <h3><img src ="images/coastsignlogo.jpg" alt="Fullerton College icon"  class="college-icon"></h3>
 
                   <h3>Coast Sign | Information Technology Help Desk support</h3>
                   <p class="info">Help Desk support <span>&bull;</span> <em class="date">May 2023 - Present</em></p>
@@ -183,8 +196,9 @@
             <div class="row item">
 
                <div class="twelve columns">
+                  <h3><img src="images/lpglogo.jpg" alt="Litigation Practice Group" class="college-icon"></h3>
 
-                  <h3>Litigation Practive Group | HelpDesk support</h3>
+                  <h3>Litigation Practice Group | HelpDesk support</h3>
                   <p class="info">HelpDesk <span>&bull;</span> <em class="date">June 2022 - May 2023</em></p>
 
                   <p>
